feat: listagem de ajustes solicitos
